examples/0.2.3/HIPAA-AllowList-SCP.md
| Service Prefix             | Service Name                                    |
|----------------------------|-------------------------------------------------|
| a4b                        | Alexa for Business                              |
| account                    | AWS Accounts                                    |
| acm                        | AWS Certificate Manager                         |
| amplify                    | AWS Amplify                                     |
| amplifybackend             | AWS Amplify Admin                               |
| apigateway                 | Manage Amazon API Gateway                       |
| application-autoscaling    | Application Auto Scaling                        |
| appmesh                    | AWS App Mesh                                    |
| appstream                  | Amazon AppStream 2.0                            |
| appsync                    | AWS AppSync                                     |
| athena                     | Amazon Athena                                   |
| autoscaling                | Amazon EC2 Auto Scaling                         |
| autoscaling-plans          | AWS Auto Scaling                                |
| aws-marketplace            | AWS Private Marketplace                         |
| aws-marketplace-management | AWS Marketplace Management Portal               |
| aws-portal                 | AWS Billing                                     |
| backup                     | AWS Backup                                      |
| backup-storage             | AWS Backup storage                              |
| batch                      | AWS Batch                                       |
| chime                      | Amazon Chime                                    |
| clouddirectory             | Amazon Cloud Directory                          |
| cloudformation             | AWS CloudFormation                              |
| cloudfront                 | Amazon CloudFront                               |
| cloudhsm                   | AWS CloudHSM                                    |
| cloudtrail                 | AWS CloudTrail                                  |
| cloudwatch                 | Amazon CloudWatch                               |
| codebuild                  | AWS CodeBuild                                   |
| codecommit                 | AWS CodeCommit                                  |
| codedeploy                 | AWS CodeDeploy                                  |
| codepipeline               | AWS CodePipeline                                |
| cognito-identity           | Amazon Cognito Identity                         |
| cognito-idp                | Amazon Cognito User Pools                       |
| cognito-sync               | Amazon Cognito Sync                             |
| comprehend                 | Amazon Comprehend                               |
| comprehendmedical          | Comprehend Medical                              |
| config                     | AWS Config                                      |
| connect                    | Amazon Connect                                  |
| dataexchange               | AWS Data Exchange                               |
| datasync                   | DataSync                                        |
| directconnect              | AWS Direct Connect                              |
| dms                        | AWS Database Migration Service                  |
| ds                         | AWS Directory Service                           |
| dynamodb                   | Amazon DynamoDB                                 |
| ebs                        | Amazon Elastic Block Store                      |
| ec2                        | Amazon EC2                                      |
| ec2messages                | Amazon Message Delivery Service                 |
| ecr                        | Amazon Elastic Container Registry               |
| ecs                        | Amazon Elastic Container Service                |
| eks                        | Amazon Elastic Container Service for Kubernetes |
| elasticache                | Amazon ElastiCache                              |
| elasticbeanstalk           | AWS Elastic Beanstalk                           |
| elasticfilesystem          | Amazon Elastic File System                      |
| elasticloadbalancing       | Elastic Load Balancing V2                       |
| elasticmapreduce           | Amazon Elastic MapReduce                        |
| es                         | Amazon Elasticsearch Service                    |
| events                     | Amazon EventBridge                              |
| execute-api                | Amazon API Gateway                              |
| firehose                   | Amazon Kinesis Firehose                         |
| fms                        | AWS Firewall Manager                            |
| forecast                   | Amazon Forecast                                 |
| freertos                   | Amazon FreeRTOS                                 |
| fsx                        | Amazon FSx                                      |
| glacier                    | Amazon Glacier                                  |
| globalaccelerator          | AWS Global Accelerator                          |
| glue                       | AWS Glue                                        |
| greengrass                 | AWS IoT Greengrass                              |
| guardduty                  | Amazon GuardDuty                                |
| health                     | AWS Health APIs and Notifications               |
| healthlake                 |                                                 |
| iam                        | Identity And Access Management                  |
| importexport               | AWS Import Export Disk Service                  |
| inspector                  | Amazon Inspector                                |
| iot                        | AWS IoT                                         |
| iot-device-tester          | AWS IoT Device Tester                           |
| iotdeviceadvisor           | AWS IoT Core Device Advisor                     |
| iotevents                  | AWS IoT Events                                  |
| iotwireless                | AWS IoT Core for LoRaWAN                        |
| kendra                     | Amazon Kendra                                   |
| kinesis                    | Amazon Kinesis                                  |
| kinesisanalytics           | Amazon Kinesis Analytics V2                     |
| kinesisvideo               | Amazon Kinesis Video Streams                    |
| kms                        | AWS Key Management Service                      |
| lakeformation              | AWS Lake Formation                              |
| lambda                     | AWS Lambda                                      |
| lex                        | Amazon Lex                                      |
| logs                       | Amazon CloudWatch Logs                          |
| macie                      | Amazon Macie Classic                            |
| macie2                     | Amazon Macie                                    |
| mediaconnect               | AWS Elemental MediaConnect                      |
| mediaconvert               | AWS Elemental MediaConvert                      |
| medialive                  | AWS Elemental MediaLive                         |
| mobiletargeting            | Amazon Pinpoint                                 |
| mq                         | Amazon MQ                                       |
| msk                        |                                                 |
| neptune-db                 | Amazon Neptune                                  |
| opsworks                   | AWS OpsWorks                                    |
| opsworks-cm                | AWS OpsWorks Configuration Management           |
| organizations              | AWS Organizations                               |
| outposts                   | AWS Outposts                                    |
| personalize                | Amazon Personalize                              |
| polly                      | Amazon Polly                                    |
| qldb                       | Amazon QLDB                                     |
| quicksight                 | Amazon QuickSight                               |
| rds                        | Amazon RDS                                      |
| rds-data                   | Amazon RDS Data API                             |
| rds-db                     | Amazon RDS IAM Authentication                   |
| redshift                   | Amazon Redshift                                 |
| rekognition                | Amazon Rekognition                              |
| robomaker                  | AWS RoboMaker                                   |
| route53                    | Amazon Route 53                                 |
| route53domains             | Amazon Route53 Domains                          |
| s3                         | Amazon S3                                       |
| sagemaker                  | Amazon SageMaker                                |
| secretsmanager             | AWS Secrets Manager                             |
| securityhub                | AWS Security Hub                                |
| serverlessrepo             | AWS Serverless Application Repository           |
| servicecatalog             | AWS Service Catalog                             |
| servicediscovery           | AWS Cloud Map                                   |
| ses                        | Amazon SES                                      |
| shield                     | AWS Shield                                      |
| sms                        | AWS Server Migration Service                    |
| snowball                   | AWS Snowball                                    |
| sns                        | Amazon SNS                                      |
| sqs                        | Amazon SQS                                      |
| ssm                        | AWS Systems Manager                             |
| ssmmessages                | Amazon Session Manager Message Gateway Service  |
| states                     | AWS Step Functions                              |
| storagegateway             | Amazon Storage Gateway                          |
| sts                        | AWS Security Token Service                      |
| support                    | AWS Support                                     |
| swf                        | Amazon Simple Workflow Service                  |
| textract                   | Amazon Textract                                 |
| timestream                 | AWS Timestream                                  |
| transcribe                 | Amazon Transcribe                               |
| transfer                   | AWS Transfer for SFTP                           |
| translate                  | Amazon Translate                                |
| waf                        | AWS WAF                                         |
| waf-regional               | AWS WAF Regional                                |
| wafv2                      | AWS WAF V2                                      |
| workdocs                   | Amazon WorkDocs                                 |
| worklink                   | Amazon WorkLink                                 |
| workspaces                 | Amazon WorkSpaces                               |
| xray                       | AWS X-Ray                                       |
