examples/0.2.11/HIPAA-AllowList-SCP.md
| Service Prefix             | Service Name                                                                                                                                                                           |
|----------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| a4b                        | [Alexa for Business](https://docs.aws.amazon.com/service-authorization/latest/reference/list_alexaforbusiness.html)                                                                    |
| access-analyzer            | [IAM Access Analyzer](https://docs.aws.amazon.com/service-authorization/latest/reference/list_iamaccessanalyzer.html)                                                                  |
| account                    | [AWS Accounts](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsaccounts.html)                                                                               |
| acm                        | [AWS Certificate Manager](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awscertificatemanager.html)                                                          |
| acm-pca                    | [AWS Certificate Manager Private Certificate Authority](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awscertificatemanagerprivatecertificateauthority.html) |
| amplify                    | [AWS Amplify](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsamplify.html)                                                                                 |
| amplifybackend             | [AWS Amplify Admin](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsamplifyadmin.html)                                                                      |
| apigateway                 | [Manage Amazon API Gateway](https://docs.aws.amazon.com/service-authorization/latest/reference/list_manageamazonapigateway.html)                                                       |
| appflow                    | [Amazon AppFlow](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonappflow.html)                                                                           |
| application-autoscaling    | [Application Auto Scaling](https://docs.aws.amazon.com/service-authorization/latest/reference/list_applicationautoscaling.html)                                                        |
| appmesh                    | [AWS App Mesh](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsappmesh.html)                                                                                |
| appstream                  | [Amazon AppStream 2.0](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonappstream2.0.html)                                                                |
| appsync                    | [AWS AppSync](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsappsync.html)                                                                                 |
| athena                     | [Amazon Athena](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonathena.html)                                                                             |
| autoscaling                | [Amazon EC2 Auto Scaling](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonec2autoscaling.html)                                                           |
| autoscaling-plans          | [AWS Auto Scaling](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsautoscaling.html)                                                                        |
| aws-marketplace            | [AWS Private Marketplace](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsprivatemarketplace.html)                                                          |
| aws-marketplace-management | [AWS Marketplace Management Portal](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsmarketplacemanagementportal.html)                                       |
| aws-portal                 | [AWS Billing and Cost Management](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsbilling.html)                                                             |
| backup                     | [AWS Backup](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsbackup.html)                                                                                   |
| backup-storage             | [AWS Backup storage](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsbackupstorage.html)                                                                    |
| batch                      | [AWS Batch](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsbatch.html)                                                                                     |
| cassandra                  | [AWS Managed Apache Cassandra Service](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsmanagedapachecassandraservice.html)                                  |
| chime                      | [Amazon Chime](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonchime.html)                                                                               |
| clouddirectory             | [Amazon Cloud Directory](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonclouddirectory.html)                                                            |
| cloudformation             | [AWS CloudFormation](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awscloudformation.html)                                                                   |
| cloudfront                 | [Amazon CloudFront](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazoncloudfront.html)                                                                     |
| cloudhsm                   | [AWS CloudHSM](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awscloudhsm.html)                                                                               |
| cloudtrail                 | [AWS CloudTrail](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awscloudtrail.html)                                                                           |
| cloudwatch                 | [Amazon CloudWatch](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazoncloudwatch.html)                                                                     |
| codebuild                  | [AWS CodeBuild](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awscodebuild.html)                                                                             |
| codecommit                 | [AWS CodeCommit](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awscodecommit.html)                                                                           |
| codedeploy                 | [AWS CodeDeploy](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awscodedeploy.html)                                                                           |
| codepipeline               | [AWS CodePipeline](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awscodepipeline.html)                                                                       |
| cognito-identity           | [Amazon Cognito Identity](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazoncognitoidentity.html)                                                          |
| cognito-idp                | [Amazon Cognito User Pools](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazoncognitouserpools.html)                                                       |
| cognito-sync               | [Amazon Cognito Sync](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazoncognitosync.html)                                                                  |
| comprehend                 | [Amazon Comprehend](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazoncomprehend.html)                                                                     |
| comprehendmedical          | [Comprehend Medical](https://docs.aws.amazon.com/service-authorization/latest/reference/list_comprehendmedical.html)                                                                   |
| config                     | [AWS Config](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsconfig.html)                                                                                   |
| connect                    | [Amazon Connect](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonconnect.html)                                                                           |
| controltower               | [AWS Control Tower](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awscontroltower.html)                                                                      |
| databrew                   | [AWS Glue DataBrew](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsgluedatabrew.html)                                                                      |
| dataexchange               | [AWS Data Exchange](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsdataexchange.html)                                                                      |
| datasync                   | [DataSync](https://docs.aws.amazon.com/service-authorization/latest/reference/list_datasync.html)                                                                                      |
| directconnect              | [AWS Direct Connect](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsdirectconnect.html)                                                                    |
| dms                        | [AWS Database Migration Service](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsdatabasemigrationservice.html)                                             |
| ds                         | [AWS Directory Service](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsdirectoryservice.html)                                                              |
| dynamodb                   | [Amazon DynamoDB](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazondynamodb.html)                                                                         |
| ebs                        | [Amazon Elastic Block Store](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonelasticblockstore.html)                                                     |
| ec2                        | [Amazon EC2](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonec2.html)                                                                                   |
| ec2messages                | [Amazon Message Delivery Service](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonmessagedeliveryservice.html)                                           |
| ecr                        | [Amazon Elastic Container Registry](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonelasticcontainerregistry.html)                                       |
| ecs                        | [Amazon Elastic Container Service](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonelasticcontainerservice.html)                                         |
| elasticache                | [Amazon ElastiCache](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonelasticache.html)                                                                   |
| elasticbeanstalk           | [AWS Elastic Beanstalk](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awselasticbeanstalk.html)                                                              |
| elasticfilesystem          | [Amazon Elastic File System](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonelasticfilesystem.html)                                                     |
| elasticloadbalancing       | [Elastic Load Balancing V2](https://docs.aws.amazon.com/service-authorization/latest/reference/list_elasticloadbalancingv2.html)                                                       |
| elasticmapreduce           | [Amazon Elastic MapReduce](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonelasticmapreduce.html)                                                        |
| events                     | [Amazon EventBridge](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazoneventbridge.html)                                                                   |
| execute-api                | [Amazon API Gateway](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonapigateway.html)                                                                    |
| firehose                   | [Amazon Kinesis Firehose](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonkinesisfirehose.html)                                                          |
| fms                        | [AWS Firewall Manager](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsfirewallmanager.html)                                                                |
| forecast                   | [Amazon Forecast](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonforecast.html)                                                                         |
| freertos                   | [Amazon FreeRTOS](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonfreertos.html)                                                                         |
| fsx                        | [Amazon FSx](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonfsx.html)                                                                                   |
| glacier                    | [Amazon Glacier](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonglacier.html)                                                                           |
| globalaccelerator          | [AWS Global Accelerator](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsglobalaccelerator.html)                                                            |
| glue                       | [AWS Glue](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsglue.html)                                                                                       |
| greengrass                 | [AWS IoT Greengrass V2](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsiotgreengrassv2.html)                                                               |
| guardduty                  | [Amazon GuardDuty](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonguardduty.html)                                                                       |
| health                     | [AWS Health APIs and Notifications](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awshealthapisandnotifications.html)                                        |
| healthlake                 | [Amazon HealthLake](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonhealthlake.html)                                                                     |
| iam                        | [Identity And Access Management](https://docs.aws.amazon.com/service-authorization/latest/reference/list_identityandaccessmanagement.html)                                             |
| importexport               | [AWS Import Export Disk Service](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsimportexportdiskservice.html)                                              |
| inspector                  | [Amazon Inspector](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazoninspector.html)                                                                       |
| iot                        | [AWS IoT](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsiot.html)                                                                                         |
| iot-device-tester          | [AWS IoT Device Tester](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsiotdevicetester.html)                                                               |
| iotdeviceadvisor           | [AWS IoT Core Device Advisor](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsiotcoredeviceadvisor.html)                                                    |
| iotevents                  | [AWS IoT Events](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsiotevents.html)                                                                            |
| iotwireless                | [AWS IoT Core for LoRaWAN](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsiotcoreforlorawan.html)                                                          |
| kafka                      | [Amazon Managed Streaming for Kafka](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonmanagedstreamingforkafka.html)                                      |
| kendra                     | [Amazon Kendra](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonkendra.html)                                                                             |
| kinesis                    | [Amazon Kinesis](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonkinesis.html)                                                                           |
| kinesisanalytics           | [Amazon Kinesis Analytics V2](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonkinesisanalyticsv2.html)                                                   |
| kinesisvideo               | [Amazon Kinesis Video Streams](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonkinesisvideostreams.html)                                                 |
| kms                        | [AWS Key Management Service](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awskeymanagementservice.html)                                                     |
| lakeformation              | [AWS Lake Formation](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awslakeformation.html)                                                                    |
| lambda                     | [AWS Lambda](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awslambda.html)                                                                                   |
| logs                       | [Amazon CloudWatch Logs](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazoncloudwatchlogs.html)                                                            |
| macie                      | [Amazon Macie Classic](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonmacieclassic.html)                                                                |
| macie2                     | [Amazon Macie](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonmacie.html)                                                                               |
| mediaconnect               | [AWS Elemental MediaConnect](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awselementalmediaconnect.html)                                                    |
| mediaconvert               | [AWS Elemental MediaConvert](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awselementalmediaconvert.html)                                                    |
| medialive                  | [AWS Elemental MediaLive](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awselementalmedialive.html)                                                          |
| mobiletargeting            | [Amazon Pinpoint](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonpinpoint.html)                                                                         |
| mq                         | [Amazon MQ](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonmq.html)                                                                                     |
| neptune-db                 | [Amazon Neptune](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonneptune.html)                                                                           |
| network-firewall           | [AWS Network Firewall](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsnetworkfirewall.html)                                                                |
| opsworks                   | [AWS OpsWorks](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsopsworks.html)                                                                               |
| opsworks-cm                | [AWS OpsWorks Configuration Management](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsopsworksconfigurationmanagement.html)                               |
| organizations              | [AWS Organizations](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsorganizations.html)                                                                     |
| outposts                   | [AWS Outposts](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsoutposts.html)                                                                               |
| personalize                | [Amazon Personalize](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonpersonalize.html)                                                                   |
| polly                      | [Amazon Polly](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonpolly.html)                                                                               |
| qldb                       | [Amazon QLDB](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonqldb.html)                                                                                 |
| quicksight                 | [Amazon QuickSight](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonquicksight.html)                                                                     |
| rds                        | [Amazon RDS](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonrds.html)                                                                                   |
| rds-data                   | [Amazon RDS Data API](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonrdsdataapi.html)                                                                   |
| rds-db                     | [Amazon RDS IAM Authentication](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonrdsiamauthentication.html)                                               |
| redshift                   | [Amazon Redshift](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonredshift.html)                                                                         |
| rekognition                | [Amazon Rekognition](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonrekognition.html)                                                                   |
| robomaker                  | [AWS RoboMaker](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsrobomaker.html)                                                                             |
| route53                    | [Amazon Route 53](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonroute53.html)                                                                          |
| route53domains             | [Amazon Route 53 Domains](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonroute53domains.html)                                                           |
| route53resolver            | [Amazon Route 53 Resolver](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonroute53resolver.html)                                                         |
| s3                         | [Amazon S3](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazons3.html)                                                                                     |
| sagemaker                  | [Amazon SageMaker](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonsagemaker.html)                                                                       |
| secretsmanager             | [AWS Secrets Manager](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awssecretsmanager.html)                                                                  |
| securityhub                | [AWS Security Hub](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awssecurityhub.html)                                                                        |
| serverlessrepo             | [AWS Serverless Application Repository](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsserverlessapplicationrepository.html)                               |
| servicecatalog             | [AWS Service Catalog](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsservicecatalog.html)                                                                  |
| servicediscovery           | [AWS Cloud Map](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awscloudmap.html)                                                                              |
| ses                        | [Amazon Simple Email Service v2](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonsimpleemailservicev2.html)                                              |
| shield                     | [AWS Shield](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsshield.html)                                                                                   |
| sms                        | [AWS Server Migration Service](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsservermigrationservice.html)                                                 |
| snowball                   | [AWS Snowball](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awssnowball.html)                                                                               |
| sns                        | [Amazon SNS](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonsns.html)                                                                                   |
| sqs                        | [Amazon SQS](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonsqs.html)                                                                                   |
| ssm                        | [AWS Systems Manager](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awssystemsmanager.html)                                                                  |
| ssmmessages                | [Amazon Session Manager Message Gateway Service](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonsessionmanagermessagegatewayservice.html)               |
| states                     | [AWS Step Functions](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsstepfunctions.html)                                                                    |
| storagegateway             | [Amazon Storage Gateway](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonstoragegateway.html)                                                            |
| sts                        | [AWS Security Token Service](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awssecuritytokenservice.html)                                                     |
| support                    | [AWS Support](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awssupport.html)                                                                                 |
| swf                        | [Amazon Simple Workflow Service](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonsimpleworkflowservice.html)                                             |
| textract                   | [Amazon Textract](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazontextract.html)                                                                         |
| timestream                 | [AWS Timestream](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awstimestream.html)                                                                           |
| transcribe                 | [Amazon Transcribe](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazontranscribe.html)                                                                     |
| transfer                   | [AWS Transfer for SFTP](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awstransferforsftp.html)                                                               |
| translate                  | [Amazon Translate](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazontranslate.html)                                                                       |
| waf                        | [AWS WAF](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awswaf.html)                                                                                         |
| waf-regional               | [AWS WAF Regional](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awswafregional.html)                                                                        |
| wafv2                      | [AWS WAF V2](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awswafv2.html)                                                                                    |
| workdocs                   | [Amazon WorkDocs](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonworkdocs.html)                                                                         |
| worklink                   | [Amazon WorkLink](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonworklink.html)                                                                         |
| workspaces                 | [Amazon WorkSpaces](https://docs.aws.amazon.com/service-authorization/latest/reference/list_amazonworkspaces.html)                                                                     |
| xray                       | [AWS X-Ray](https://docs.aws.amazon.com/service-authorization/latest/reference/list_awsx-ray.html)                                                                                     |
